added lazy load to images

--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
 					src="./images/model-s.jpg"
 					alt="model-s"
 					class="bg"
+					load="lazy"
 				/>
 				<header>
 					<img
 						src="images/logo.svg"
 						alt="logo"
 						class="logo"
+						load="lazy"
 					/>
 					<button class="menu-btn">Menu</button>
 				</header>
