created the nodel-y, model-3, model-x and model-s UI

--- a/index.html
+++ b/index.html
@@ -43,11 +43,90 @@
 					<button>Help Me Choose</button>
 				</article>
 			</section>
+			<section class="model-y">
+				<img
+					src="images/model-y.jpg"
+					alt="model-y"
+				/>
+				<div class="top">
+					<h1>Model Y</h1>
+					<strong>From $36,490*</strong>
+					<p>After Federal Tax Credit</p>
+				</div>
+				<div class="bottom">
+					<div class="btns">
+						<button class="shop-btn">Shop Available</button>
+						<button class="demo-btn">Demo Drive</button>
+					</div>
+					<p>
+						*Price before incentives is $43,990, excluding taxes and fees.
+						Subject to change
+					</p>
+				</div>
+			</section>
+			<section class="model-y">
+				<img
+					src="images/model-3.jpg"
+					alt="model-3"
+				/>
+				<div class="top">
+					<strong>Reengineered</strong>
+					<h1>Model 3</h1>
+					<p>Lease starting at $329/mo*</p>
+				</div>
+				<div class="bottom">
+					<div class="btns">
+						<button class="shop-btn">Custom Order</button>
+						<button class="demo-btn">Demo Drive</button>
+					</div>
+					<p>
+						*Excludes taxes and fees with price subject to change. Available in
+						select states. See Details
+					</p>
+				</div>
+			</section>
+			<section class="model-y">
+				<img
+					src="images/model-x.jpg"
+					alt="model-x"
+				/>
+				<div class="top">
+					<h1>Model X</h1>
+					<strong>From $68,590*</strong>
+					<p>After Federal Tax Credit &amp; Est. Gas Savings</p>
+				</div>
+				<div class="bottom">
+					<div class="btns">
+						<button class="shop-btn">Custom Order</button>
+						<button class="demo-btn">Demo Drive</button>
+					</div>
+					<p style="color: #fff">
+						*Price before incentives and savings is $79,990, excluding taxes and
+						fees. Subject to change. Learn about est. gas savings.
+					</p>
+				</div>
+			</section>
+			<section class="model-y">
+				<img
+					src="images/model-s.jpg"
+					alt="model-s"
+				/>
+				<div class="top">
+					<h1>Model S</h1>
+					<strong>From $71,090*</strong>
+					<p>After Est. Gas Savings</p>
+				</div>
+				<div class="bottom">
+					<div class="btns">
+						<button class="shop-btn">Custom Order</button>
+						<button class="demo-btn">Demo Drive</button>
+					</div>
+					<p>
+						Price before savings is $74,990, excluding taxes and fees. Subject
+						to change. Learn about est. gas savings.
+					</p>
+				</div>
+			</section>
 		</main>
-		<script>
-			document.querySelector(
-				".firstpage"
-			).style.height = `${window.innerHeight}px`;
-		</script>
 	</body>
 </html>
