added the cybertruck design

--- a/index.html
+++ b/index.html
@@ -127,6 +127,18 @@
 					</p>
 				</div>
 			</section>
+			<section class="model-y">
+				<img
+					src="./images/Cybertruck.jpg"
+					alt="Cybertruck"
+				/>
+				<div class="bottom">
+					<div class="btns">
+						<button class="shop-btn">Order Now</button>
+						<button class="demo-btn">Learn More</button>
+					</div>
+				</div>
+			</section>
 		</main>
 	</body>
 </html>
