--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
 						<button class="demo-btn">Demo Drive</button>
 					</div>
 					<p style="color: #fff">
-						*Price before incentives and savings is $79,990, excluding taxes and
-						fees. Subject to change. Learn about est. gas savings.
+						*Price before incentives and savings is $79,990, excluding taxes and	fees. Subject to change. Learn about est. gas savings.
 					</p>
 				</div>
 			</section>
